fix 格式 + 修复 单元测试

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "eslint-config-egg",
+  "extends": "eslint-config-klg",
   "rules": {
     "no-console": "off",
     "no-else-return": "off"
