修复支持 klg-init-config

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "co": "^4.6.0",
     "colors": "^1.1.2",
     "compressing": "^1.2.3",
-    "eslint-config-klg": "file:../eslint-config-klg",
     "glob": "^7.1.2",
     "group-object": "^0.1.1",
     "inquirer": "^3.0.6",
@@ -42,8 +41,13 @@
   "devDependencies": {
     "autod": "^3.0.1",
     "coffee": "^3.3.0",
-    "eslint": "^4.13.1",
-    "eslint-config-klg": "^11.0.0",
+    "eslint": "^4.18.2",
+    "eslint-config-klg": "^1.0.6",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.0.1",
     "intelli-espower-loader": "^1.0.1",
     "mm": "^2.2.0",
     "power-assert": "^1.4.4",
